--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -125,50 +125,50 @@ spec:
             fieldRef:
               fieldPath: metadata.annotations['devops.cloud.ibm.com/triggered-by']
         - name: WORKSPACE_PATH
-          value: $(workspaces.task-pvc.path)
+          value: $(workspaces.source.path)
       securityContext:
         privileged: true
       command: ["/bin/bash", "-c"]
       args:
         - |
-            BUILDKIT_IMAGE_NAMES=$(tr -s '\r\n' ',' < /steps/tags.lst | sed -e 's/,$/\n/')
-            if [ -z "$BUILDKIT_IMAGE_NAMES" ]; then
-            # Set default image name for buildkit to push
-              BUILDKIT_IMAGE_NAMES="$REGISTRY_URL/$REGISTRY_NAMESPACE/$IMAGE_NAME"
-            fi
-            echo "Buildkit Image names: $BUILDKIT_IMAGE_NAMES"
+          BUILDKIT_IMAGE_NAMES=$(tr -s '\r\n' ',' < /steps/tags.lst | sed -e 's/,$/\n/')
+          if [ -z "$BUILDKIT_IMAGE_NAMES" ]; then
+          # Set default image name for buildkit to push
+            BUILDKIT_IMAGE_NAMES="$REGISTRY_URL/$REGISTRY_NAMESPACE/$IMAGE_NAME"
+          fi
+          echo "Buildkit Image names: $BUILDKIT_IMAGE_NAMES"
 
-            BUILD_ARG_LIST=''
-            for buildArg in $BUILD_ARG_LIST; do
-              BUILD_ARGS="${BUILD_ARGS} --opt build-arg:$buildArg "
-            done;
+          BUILD_ARG_LIST=''
+          for buildArg in $BUILD_ARG_LIST; do
+            BUILD_ARGS="${BUILD_ARGS} --opt build-arg:$buildArg "
+          done;
         - set -e -o pipefail;
           ibmcloud login -a $API -r $REGION;
           export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh";
           export GIT_COMMIT=$(git rev-parse HEAD);
           export REGISTRY_URL=$(ibmcloud cr info | sed "2q;d" | awk '{for(i=1;i<=NF;i++) if ($i=="Registry") print $(i+1)}');
           cd /workspace && source .tekton/scripts/build-docker-image.sh;
-    # - name: check-vulnerabilities
-    #   image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
-    #   env:
-    #     - name: IBMCLOUD_API_KEY
-    #       value: $(params.apikey)
-    #     - name: API
-    #       value: $(params.api)
-    #     - name: HOME
-    #       value: "/root"
-    #     - name: REGION
-    #       value: $(params.registryRegion)
-    #   command: ["/bin/bash", "-c"]
-    #   args:
-    #     - set -e -o pipefail;
-    #       ibmcloud login -a $API -r $REGION;
-    #       while read line; do export $line; done < /artifacts/build.properties;
-    #       cp /artifacts/build.properties .;
-    #       cd /workspace && source .tekton/scripts/check-vulnerabilities.sh || true;
-    #   volumeMounts:
-    #     - mountPath: /steps
-    #       name: steps-volume
+      volumeMounts:
+        - mountPath: /steps
+          name: steps-volume
+    - name: check-vulnerabilities
+      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
+      env:
+        - name: IBMCLOUD_API_KEY
+          value: $(params.apikey)
+        - name: API
+          value: $(params.api)
+        - name: HOME
+          value: "/root"
+        - name: REGION
+          value: $(params.registryRegion)
+      command: ["/bin/bash", "-c"]
+      args:
+        - set -e -o pipefail;
+          ibmcloud login -a $API -r $REGION;
+          while read line; do export $line; done < /artifacts/build.properties;
+          cp /artifacts/build.properties .;
+          cd /workspace && source .tekton/scripts/check-vulnerabilities.sh || true;
   sidecars:
     - image: "moby/buildkit:v0.8.1"
       name: server
@@ -187,59 +187,59 @@ spec:
     - name: steps-volume
       emptyDir: {}
 ---
-# apiVersion: tekton.dev/v1beta1
-# kind: Task
-# metadata:
-#   name: validate-task
-# spec:
-#   params:
-#     - name: repository
-#       description: the git repo
-#     - name: revision
-#       description: the revision
-#       default: master
-#     - name: apikey
-#       description: the ibmcloud api key
-#     - name: api
-#       description: the ibmcloud api endpoint
-#       default: "https://cloud.ibm.com"
-#     - name: registryRegion
-#       description: the ibmcloud registry region   
-#   workspaces:
-#   - name: task-pvc
-#     mountPath: /artifacts         
-#   steps:
-#     - name: clone-repo
-#       image: alpine/git
-#       env:
-#         - name: REPOSITORY
-#           value: $(params.repository)
-#         - name: REVISION
-#           value: $(params.revision)
-#       command: ["/bin/sh", "-c"]
-#       args:
-#         - set -e -o pipefail;
-#           echo "Cloning $REPOSITORY";
-#           cd /workspace && git clone -q -b $REVISION $REPOSITORY .;
-#     - name: check-vulnerabilities
-#       image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
-#       env:
-#         - name: IBMCLOUD_API_KEY
-#           value: $(params.apikey)
-#         - name: API
-#           value: $(params.api)
-#         - name: HOME
-#           value: "/root"
-#         - name: REGION
-#           value: $(params.registryRegion)
-#       command: ["/bin/bash", "-c"]
-#       args:
-#         - set -e -o pipefail;
-#           ibmcloud login -a $API -r $REGION;
-#           while read line; do export $line; done < /artifacts/build.properties;
-#           cp /artifacts/build.properties .;
-#           cd /workspace && source .tekton/scripts/check-vulnerabilities.sh || true;
-# ---
+apiVersion: tekton.dev/v1beta1
+kind: Task
+metadata:
+  name: validate-task
+spec:
+  params:
+    - name: repository
+      description: the git repo
+    - name: revision
+      description: the revision
+      default: master
+    - name: apikey
+      description: the ibmcloud api key
+    - name: api
+      description: the ibmcloud api endpoint
+      default: "https://cloud.ibm.com"
+    - name: registryRegion
+      description: the ibmcloud registry region   
+  workspaces:
+  - name: task-pvc
+    mountPath: /artifacts         
+  steps:
+    - name: clone-repo
+      image: alpine/git
+      env:
+        - name: REPOSITORY
+          value: $(params.repository)
+        - name: REVISION
+          value: $(params.revision)
+      command: ["/bin/sh", "-c"]
+      args:
+        - set -e -o pipefail;
+          echo "Cloning $REPOSITORY";
+          cd /workspace && git clone -q -b $REVISION $REPOSITORY .;
+    - name: check-vulnerabilities
+      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
+      env:
+        - name: IBMCLOUD_API_KEY
+          value: $(params.apikey)
+        - name: API
+          value: $(params.api)
+        - name: HOME
+          value: "/root"
+        - name: REGION
+          value: $(params.registryRegion)
+      command: ["/bin/bash", "-c"]
+      args:
+        - set -e -o pipefail;
+          ibmcloud login -a $API -r $REGION;
+          while read line; do export $line; done < /artifacts/build.properties;
+          cp /artifacts/build.properties .;
+          cd /workspace && source .tekton/scripts/check-vulnerabilities.sh || true;
+---
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
