--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -131,6 +131,76 @@ spec:
       command: ["/bin/bash", "-c"]
       args:
         - |
+          # Input env variables (can be received via a pipeline environment properties.file.
+          echo "REGISTRY_URL=${REGISTRY_URL}"
+          echo "REGISTRY_NAMESPACE=${REGISTRY_NAMESPACE}"
+          echo "IMAGE_NAME=${IMAGE_NAME}"
+          echo "BUILD_NUMBER=${BUILD_NUMBER}"
+          echo "ARCHIVE_DIR=${ARCHIVE_DIR}"
+          echo "GIT_BRANCH=${GIT_BRANCH}"
+          echo "GIT_COMMIT=${GIT_COMMIT}"
+          echo "DOCKER_ROOT=${DOCKER_ROOT}"
+          echo "DOCKER_FILE=${DOCKER_FILE}"
+
+          # View build properties
+          if [ -f build.properties ]; then 
+            echo "build.properties:"
+            cat build.properties | grep -v -i password
+          else 
+            echo "build.properties : not found"
+          fi 
+          # also run 'env' command to find all available env variables
+          # or learn more about the available environment variables at:
+          # https://cloud.ibm.com/docs/services/ContinuousDelivery/pipeline_deploy_var.html#deliverypipeline_environment
+
+          # To review or change build options use:
+          # ibmcloud cr build --help
+
+          # Minting image tag using format: BUILD_NUMBER-BRANCH-COMMIT_ID-TIMESTAMP
+          # e.g. 3-master-50da6912-20181123114435
+          # (use build number as first segment to allow image tag as a patch release name according to semantic versioning)
+          TIMESTAMP=$( date -u "+%Y%m%d%H%M%S")
+          IMAGE_TAG=${TIMESTAMP}
+          if [ ! -z "${GIT_COMMIT}" ]; then
+            GIT_COMMIT_SHORT=$( echo ${GIT_COMMIT} | head -c 8 ) 
+            IMAGE_TAG=${GIT_COMMIT_SHORT}-${IMAGE_TAG}
+          fi
+          if [ ! -z "${GIT_BRANCH}" ]; then IMAGE_TAG=${GIT_BRANCH}-${IMAGE_TAG} ; fi
+          IMAGE_TAG=${BUILD_NUMBER}-${IMAGE_TAG}
+
+          # Checking ig buildctl is installed
+          if which buildctl > /dev/null 2>&1; then
+            buildctl --version
+          else 
+            echo "Installing Buildkit builctl"
+            curl -sL https://github.com/moby/buildkit/releases/download/v0.8.1/buildkit-v0.8.1.linux-amd64.tar.gz | tar -C /tmp -xz bin/buildctl && mv /tmp/bin/buildctl /usr/bin/buildctl && rmdir --ignore-fail-on-non-empty /tmp/bin
+            buildctl --version
+          fi
+
+          # Create the config.json file to make private container registry accessible
+          export DOCKER_CONFIG=$(mktemp -d -t cr-config-XXXXXXXXXX)
+          kubectl create secret --dry-run=true --output=json \
+            docker-registry registry-dockerconfig-secret \
+            --docker-server=us.io.cr \
+            --docker-password=${IBMCLOUD_API_KEY} \
+            --docker-username=iamapikey --docker-email=favella@ibm.com | \
+          jq -r '.data[".dockerconfigjson"]' | base64 -d > ${DOCKER_CONFIG}/config.json
+
+          echo "=========================================================="
+          echo -e "BUILDING CONTAINER IMAGE: ${IMAGE_NAME}:${IMAGE_TAG}"
+          if [ -z "${DOCKER_ROOT}" ]; then DOCKER_ROOT=. ; fi
+          if [ -z "${DOCKER_FILE}" ]; then DOCKER_FILE=Dockerfile ; fi
+          if [ -z "$EXTRA_BUILD_ARGS" ]; then
+            echo -e ""
+          else
+            for buildArg in $EXTRA_BUILD_ARGS; do
+              if [ "$buildArg" == "--build-arg" ]; then
+                echo -e ""
+              else      
+                BUILD_ARGS="${BUILD_ARGS} --opt build-arg:$buildArg"
+              fi
+            done
+          fi
           BUILDKIT_IMAGE_NAMES=$(tr -s '\r\n' ',' < /steps/tags.lst | sed -e 's/,$/\n/')
           if [ -z "$BUILDKIT_IMAGE_NAMES" ]; then
           # Set default image name for buildkit to push
@@ -141,7 +211,60 @@ spec:
           BUILD_ARG_LIST=''
           for buildArg in $BUILD_ARG_LIST; do
             BUILD_ARGS="${BUILD_ARGS} --opt build-arg:$buildArg "
-          done;
+          done
+          set -x
+          buildctl --addr tcp://localhost:1234 build \
+            --progress=plain \
+            --frontend=dockerfile.v0 \
+            --opt filename=Dockerfile \
+            ${BUILD_ARGS} \
+            --local context=/artifacts/. \
+            --local dockerfile= ./Dockerfile \
+            #--exporter=image --exporter-opt "name=$BUILDKIT_IMAGE_NAMES" --exporter-opt "push=true" \
+            --output type=image,"name=us.icr.io/tekton-handson/angulist-app:1.0.0",push=true \
+            #--output type=image,name=$REGISTRY_URL/$REGISTRY_NAMESPACE/$IMAGE_NAME:tag1,name=username/image:tag2,push=true
+            --export-cache type=inline \
+            --import-cache type=registry,ref=$IMAGE_REPOSITORY 2>&1 | tee /steps/build.log
+          set +x
+
+          ibmcloud cr image-inspect ${REGISTRY_URL}/${REGISTRY_NAMESPACE}/${IMAGE_NAME}:${IMAGE_TAG}
+
+          # Set PIPELINE_IMAGE_URL for subsequent jobs in stage (e.g. Vulnerability Advisor)
+          export PIPELINE_IMAGE_URL="$REGISTRY_URL/$REGISTRY_NAMESPACE/$IMAGE_NAME:$IMAGE_TAG"
+
+          ibmcloud cr images --restrict ${REGISTRY_NAMESPACE}/${IMAGE_NAME}
+
+          ######################################################################################
+          # Copy any artifacts that will be needed for deployment and testing to $WORKSPACE    #
+          ######################################################################################
+          echo "=========================================================="
+          echo "COPYING ARTIFACTS needed for deployment and testing (in particular build.properties)"
+
+          echo "Checking archive dir presence"
+          if [ -z "${ARCHIVE_DIR}" ]; then
+            echo -e "Build archive directory contains entire working directory."
+          else
+            echo -e "Copying working dir into build archive directory: ${ARCHIVE_DIR} "
+            mkdir -p ${ARCHIVE_DIR}
+            find . -mindepth 1 -maxdepth 1 -not -path "./$ARCHIVE_DIR" -exec cp -R '{}' "${ARCHIVE_DIR}/" ';'
+          fi
+
+          # Persist env variables into a properties file (build.properties) so that all pipeline stages consuming this
+          # build as input and configured with an environment properties file valued 'build.properties'
+          # will be able to reuse the env variables in their job shell scripts.
+
+          # If already defined build.properties from prior build job, append to it.
+          cp build.properties $ARCHIVE_DIR/ || :
+
+          # IMAGE information from build.properties is used in Helm Chart deployment to set the release name
+          echo "IMAGE_NAME=${IMAGE_NAME}" >> $ARCHIVE_DIR/build.properties
+          echo "IMAGE_TAG=${IMAGE_TAG}" >> $ARCHIVE_DIR/build.properties
+          # REGISTRY information from build.properties is used in Helm Chart deployment to generate cluster secret
+          echo "REGISTRY_URL=${REGISTRY_URL}" >> $ARCHIVE_DIR/build.properties
+          echo "REGISTRY_NAMESPACE=${REGISTRY_NAMESPACE}" >> $ARCHIVE_DIR/build.properties
+          echo "GIT_BRANCH=${GIT_BRANCH}" >> $ARCHIVE_DIR/build.properties
+          echo "File 'build.properties' created for passing env variables to subsequent pipeline jobs:"
+          cat $ARCHIVE_DIR/build.properties | grep -v -i password;
         - set -e -o pipefail;
           ibmcloud login -a $API -r $REGION;
           export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh";
